# xian-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yml  validate.yml
docs/: ARCHITECTURE.md  BACKLOG.md  DISTRIBUTION.md  LIFECYCLE_CONTRACT.md  README.md
scripts/: install.ps1  install.sh  release_smoke_test.py
src/: README.md
src/xian_cli/: README.md  __main__.py  abci_bridge.py  cli.py  cometbft.py  config_repo.py  contract_bundles.py  models.py  network_plans.py  output.py  parser.py  runtime.py  secret_files.py  setup_contract.py
src/xian_cli/client/: __init__.py  handlers.py  parser.py
src/xian_cli/commands/: __init__.py  catalog.py  common.py  doctor.py  lifecycle.py  network.py  node.py  node_context.py  recovery.py  setup.py
tests/: README.md  test_cli.py  test_entrypoints.py  test_setup_golden.py
tests/fixtures/: genesis.json
