[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "xian-cli"
version = "0.1.0"
description = "Operator CLI for Xian networks and nodes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pynacl>=1.6.2,<2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.15.5,<0.16",
]

[project.scripts]
xian = "xian_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
