[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "xian-tech-cli"
version = "0.1.3"
description = "Operator CLI for Xian networks and nodes"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Xian Core Team" }]
requires-python = ">=3.12"
dependencies = [
    "pynacl>=1.6.2,<2",
    "xian-tech-abci",
    "xian-tech-py",
]
keywords = ["blockchain", "cometbft", "cli", "operator", "xian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.15.5,<0.16",
]

[project.scripts]
xian = "xian_cli.cli:main"

[project.urls]
Repository = "https://github.com/xian-technology/xian-cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv.sources]
xian-tech-abci = { path = "../xian-abci", editable = true }
xian-tech-contracting = { path = "../xian-contracting", editable = true }
xian-tech-py = { path = "../xian-py", editable = true }
