[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "xian-tech-cli"
version = "0.2.0"
description = "Operator CLI for Xian networks and nodes"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Xian Core Team" }]
requires-python = ">=3.14,<3.15"
dependencies = [
    "pynacl>=1.6.2,<2",
    "xian-tech-abci>=0.9.0,<0.10",
    "xian-tech-contracting>=1.1.0,<2",
    "xian-tech-py>=0.5.0,<0.6",
]
keywords = ["blockchain", "cometbft", "cli", "operator", "xian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0,<8",
    "ruff>=0.15.12,<0.16",
    "xian-tech-vm-core>=0.1.0,<0.2",
]

[project.scripts]
xian = "xian_cli.cli:main"

[project.urls]
Repository = "https://github.com/xian-technology/xian-cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv.sources]
xian-tech-abci = { path = "../xian-abci", editable = true }
xian-tech-contracting = { path = "../xian-contracting", editable = true }
xian-tech-vm-core = { path = "../xian-contracting/packages/xian-vm-core", editable = true }
xian-tech-py = { path = "../xian-py", editable = true }
